--- a/cpc_node/package.json
+++ b/cpc_node/package.json
@@ -2,7 +2,7 @@
   "name": "cpc_node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
@@ -12,7 +12,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./bin/www",
+    "start:dev": "nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
